--- a/roles/frontend/tasks/main.yml
+++ b/roles/frontend/tasks/main.yml
@@ -1,25 +1,6 @@
-#yum install nginx -y
-#rm -rf /usr/share/nginx/html/*
-#curl -o /tmp/frontend.zip https://roboshop-artifacts.s3.amazonaws.com/frontend.zip
-#cd /usr/share/nginx/html
-#unzip /tmp/frontend.zip
+
 #vim /etc/nginx/default.d/roboshop.conf
-#  proxy_http_version 1.1;
-#  location /images/ {
-#  expires 5s;
-#  root   /usr/share/nginx/html;
-#  try_files $uri /images/placeholder.jpg;
-#}
-#  location /api/catalogue/ { proxy_pass http://localhost:8080/; }
-#  location /api/user/ { proxy_pass http://localhost:8080/; }
-#  location /api/cart/ { proxy_pass http://localhost:8080/; }
-#  location /api/shipping/ { proxy_pass http://localhost:8080/; }
-#  location /api/payment/ { proxy_pass http://localhost:8080/; }
-#
-#  location /health {
-#  stub_status on;
-#  access_log off;
-#}
+
 #systemctl enable nginx
 #systemctl start nginx
 #systemctl restart nginx
@@ -45,3 +26,16 @@
     src: https://roboshop-artifacts.s3.amazonaws.com/frontend.zip
     dest: /usr/share/nginx/html
     remote_src: yes
+
+- name: Copy file with owner and permissions
+  ansible.builtin.copy:
+    src: roboshop.conf
+    dest: /etc/nginx/default.d/roboshop.conf
+
+- name: Enable and start the nginx service
+  ansible.builtin.systemd:
+    name: nginx
+    state: started
+    enabled: true
+
+
