--- a/roles/frontend/tasks/main.yml
+++ b/roles/frontend/tasks/main.yml
@@ -27,8 +27,8 @@
 - name: Enable and start the nginx service
   ansible.builtin.systemd:
     name: nginx
-    enabled: yes
     state: restarted
+    enabled: ye
 
 
 
