--- a/roles/mongodb/tasks/main.yml
+++ b/roles/mongodb/tasks/main.yml
@@ -1,3 +1,14 @@
-- name: print mongodb
-  ansible.builtin.debug:
-    msg: mongodb
+#[mongodb-org-4.2]
+#  name=MongoDB Repository
+#  baseurl=https://repo.mongodb.org/yum/redhat/$releasever/mongodb-org/4.2/x86_64/
+#  gpgcheck=0
+#  enabled=1
+#
+#  yum install mongodb-org -y
+#
+#  systemctl enable mongod
+#  systemctl start mongod
+#
+#  Update listen address from 127.0.0.1 to 0.0.0.0 in /etc/mongod.conf
+#
+#  systemctl restart mongod
