--- a/roles/frontend/tasks/main.yml
+++ b/roles/frontend/tasks/main.yml
@@ -1,34 +1,34 @@
-#- name: Install nginx
-#  ansible.builtin.yum:
-#    name: nginx
-#    state: installed
-#
-#- name: Removing old content
-#  ansible.builtin.file:
-#    path: /usr/share/nginx/html
-#    state: absent
-#
-#- name: Creating application directory
-#  ansible.builtin.file:
-#    path: /usr/share/nginx/html
-#    state: directory
-#
-#- name: downloading and unzipping the artifacts
-#  ansible.builtin.unarchive:
-#    src: https://roboshop-artifacts.s3.amazonaws.com/frontend.zip
-#    dest: /usr/share/nginx/html
-#    remote_src: yes
-#
-#- name: create roboshop nginx conf file
-#  ansible.builtin.copy:
-#    src: roboshop.conf
-#    dest: /etc/nginx/default.d/roboshop.conf
-#
-#- name: Enable and start the nginx service
-#  ansible.builtin.systemd:
-#    name: nginx
-#    state: restarted
-#    enabled: yes
+- name: Install nginx
+  ansible.builtin.yum:
+    name: nginx
+    state: installed
+
+- name: Removing old content
+  ansible.builtin.file:
+    path: /usr/share/nginx/html
+    state: absent
+
+- name: Creating application directory
+  ansible.builtin.file:
+    path: /usr/share/nginx/html
+    state: directory
+
+- name: downloading and unzipping the artifacts
+  ansible.builtin.unarchive:
+    src: https://roboshop-artifacts.s3.amazonaws.com/frontend.zip
+    dest: /usr/share/nginx/html
+    remote_src: yes
+
+- name: create roboshop nginx conf file
+  ansible.builtin.copy:
+    src: roboshop.conf
+    dest: /etc/nginx/default.d/roboshop.conf
+
+- name: Enable and start the nginx service
+  ansible.builtin.systemd:
+    name: nginx
+    state: restarted
+    enabled: yes
 
 
 
