--- a/roles/mongodb/tasks/main.yml
+++ b/roles/mongodb/tasks/main.yml
@@ -1,14 +1,21 @@
-#[mongodb-org-4.2]
-#  name=MongoDB Repository
-#  baseurl=https://repo.mongodb.org/yum/redhat/$releasever/mongodb-org/4.2/x86_64/
-#  gpgcheck=0
-#  enabled=1
-#
-#  yum install mongodb-org -y
-#
-#  systemctl enable mongod
-#  systemctl start mongod
-#
-#  Update listen address from 127.0.0.1 to 0.0.0.0 in /etc/mongod.conf
-#
-#  systemctl restart mongod
+- name: setting up mongodb repo
+  ansible.builtin.copy:
+    src: mongodb.repo
+    dest: /etc/yum.repos.d/mongodb.repo
+
+- name: Install mongodb
+  ansible.builtin.yum:
+    name: mongodb-org
+    state: installed
+
+- name: Replace old hostname with new hostname (requires Ansible >= 2.4)
+  ansible.builtin.replace:
+    path: /etc/mongod.conf
+    regexp: '127.0.0.1'
+    replace: '0.0.0.0'
+
+- name: Enable and restart mongodb
+  ansible.builtin.service:
+    name: mongod
+    enabled: true
+    state: restarted
