--- a/roles/mongodb/tasks/main.yml
+++ b/roles/mongodb/tasks/main.yml
@@ -8,7 +8,7 @@
     name: mongodb-org
     state: installed
 
-- name: Replace old hostname with new hostname (requires Ansible >= 2.4)
+- name: changing listen address
   ansible.builtin.replace:
     path: /etc/mongod.conf
     regexp: '127.0.0.1'
@@ -19,3 +19,4 @@
     name: mongod
     enabled: true
     state: restarted
+
