--- a/roles/rabbitmq/tasks/main.yml
+++ b/roles/rabbitmq/tasks/main.yml
@@ -1,14 +1,29 @@
-#curl -s https://packagecloud.io/install/repositories/rabbitmq/erlang/script.rpm.sh | sudo bash
-#
-#yum install erlang -y
-#
-#curl -s https://packagecloud.io/install/repositories/rabbitmq/rabbitmq-server/script.rpm.sh | sudo bash
-#
-#yum install rabbitmq-server -y
-#
-#systemctl enable rabbitmq-server
-#systemctl start rabbitmq-server
-#
-#rabbitmqctl add_user roboshop roboshop123
-#rabbitmqctl set_user_tags roboshop administrator
-#rabbitmqctl set_permissions -p / roboshop ".*" ".*" ".*"
+- name: Configure YUM Repos for erlang
+  ansible.builtin.shell: curl -s https://packagecloud.io/install/repositories/rabbitmq/erlang/script.rpm.sh | bash
+
+- name: Configure YUM Repos for RabbitMQ
+  ansible.builtin.shell: curl -s https://packagecloud.io/install/repositories/rabbitmq/rabbitmq-server/script.rpm.sh | bash
+
+- name: install erlang and RabbitMQ
+  ansible.builtin.yum:
+    name:
+      - erlang
+      - rabbitmq-server
+    state: installed
+
+- name: Enable and restart rabbitmq-server
+  ansible.builtin.service:
+    name: rabbitmq-server
+    enabled: true
+    state: restarted
+
+- name: Add application user
+  community.rabbitmq.rabbitmq_user:
+    user: robohsop
+    password: roboshop123
+    vhost: /
+    configure_priv: .*
+    read_priv: .*
+    write_priv: .*
+    state: present
+
