--- a/roles/mysql/tasks/main.yml
+++ b/roles/mysql/tasks/main.yml
@@ -1,3 +1,22 @@
-- name: print mysql
-  ansible.builtin.debug:
-    msg: mysql
+- name: setup mysql repo
+  ansible.builtin.copy:
+    src: mysql.repo
+    dest: /etc/yum.repos.d/mysql.repo
+
+- name: disable mysql module
+  ansible.builtin.shell: dnf module disable mysql -y
+
+- name: install mysql
+  ansible.builtin.yum:
+    name: mysql-community-server
+    state: installed
+
+- name: Enable and restart mysql
+  ansible.builtin.service:
+    name: mysql
+    enabled: true
+    state: restarted
+
+- name: set password for mysql
+  ansible.builtin.shell: mysql_secure_installation --set-root-pass RoboShop@1
+  ignore_errors: yes
