--- a/roles/cart/tasks/main.yml
+++ b/roles/cart/tasks/main.yml
@@ -1,3 +1,5 @@
-- name: print cart
-  ansible.builtin.debug:
-    msg: cart
+- name: Load nodejs
+  ansible.builtin.import_role:
+    name: common
+    tasks_from: nodejs
+
