--- a/roles/catalogue/tasks/main.yml
+++ b/roles/catalogue/tasks/main.yml
@@ -1,3 +1,4 @@
-- name: print catalogue
-  ansible.builtin.debug:
-    msg: catalogue
+- name: Load nodejs
+  ansible.builtin.import_role:
+    name: common
+    tasks_from: nodejs
