--- a/roles/payment/tasks/main.yml
+++ b/roles/payment/tasks/main.yml
@@ -1,3 +1,4 @@
-- name: print payment
-  ansible.builtin.debug:
-    msg: payment
+- name: Load python
+  ansible.builtin.import_role:
+    name: common
+    tasks_from: python
